@@ -5,6 +5,7 @@
     beta1:
     - GUI reimplemented on top of wxWidgets library
     - internal GUI settings moved from guiopts-internals.lua to gui.ini file
+    - Windows NT 4.0 and Windows 2000 support dropped due to a poor system API
     - Internals: Windows Driver Kit support dropped because of its
       unreliable development environment - use Windows SDK v6.1 instead
 
